# job-desc-parser

./: pyproject.toml
data/: IT Specialst Upload2.xlsx  Role Description IT Specialist for pHR - Copy.docx
data/New folder/: Quality Coordinator job description.docx
job_desc_parser/: job-desc-parser.py  utils.py
output/: data_table.csv
tests/: test_job_desc_parser.py
