[tool.poetry]
name = "job-desc-parser"
version = "0.1.0"
description = ""
authors = ["jpetersheim <42748029+jpetersheim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.7"
pandas = "^1.4.1"
docx2txt = "^0.8"
spacy = "^3.2.3"
docx2python = "^2.0.4"
pdfminer = "^20191125"
tk = "^0.1.0"
python-docx = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
